# CSLP_project_g2

./: .gitignore  README.md  golomb_test
D1/: CMakeCache.txt  CMakeLists.txt  DisplayHistogram  DisplayImage  DisplayImage.cpp  Ex3  Ex3.cpp  Ex4  Ex4.cpp  Ex5  Ex5.cpp  Ex6  Ex6.cpp  Makefile  TestDelivery1  TestDelivery1.cpp  cmake_install.cmake
D2/: TestDelivery2.cpp
D3/: BitStream.h  Golomb.cpp  Golomb.h  GolombTest.cpp  input.txt
D4/: CMakeLists.txt  codec  intraframe_video_codec_2.py  main_decoder.cpp  main_encoder.cpp  predict.cpp  predictMain.cpp  predictTest.cpp  predictive_codec_1.py  t3.py  t3_codec.py  t4.py  t4_dct_codec.py  video_dct.npz
D4 new/t1/: CMakeLists.txt  howtorun.txt
D4 new/t1/include/: Golomb.h
D4 new/t1/src/: predictive_codec.cpp  predictor.cpp
D4 new/t2/src/: metrics.cpp  video_codec.cpp
D4/common/: Golomb.h
D4/decoder/: LosslessImageDecoder.cpp
D4/encoder/: LosslessImageEncoder.cpp
D4/t1/: CMakeLists.txt  howtorun.txt
D4/t1/include/: predictive_codec.h
D4/t1/src/: BitStream.cpp  predictive_codec.cpp
D4/t1/test/: tarefa1.cpp
D4/t2/: CMakeLists.txt  howtorun.txt
D4/t2/include/: BitStream.h  video_codec.h
D4/t2/test/: tarefa2.cpp
D4/t3/: CMakeLists.txt  howtorun.txt
D4/t3/common/: BitStream.cpp  BitStream.h  Golomb.cpp
D4/t3/include/: Golomb.h  lossy_codec.h  metrics.h  predictor.h  video_codec.h
D4/t3/src/: BitStream.cpp  Golomb.cpp  video_codec.cpp
D4/t3/test/: tarefa3.cpp
D4/t4/: CMakeLists.txt  howtorun.txt
D4/t4/include/: BitStream.h  Golomb.h
D4/t4/src/: BitStream.cpp  Golomb.cpp  lossy_codec.cpp
D4/t4/test/: tarefa4.cpp
